--- a/info/imp.tex
+++ b/info/imp.tex
@@ -1,8 +1,89 @@
+<section class="schedual-text-box" >
+  <div class="schedual-text">Your Schedule</div>
+
+  <div class="schedual-text2">   <span id="day-name"> </span> upcoming Classes and tasks</div>
+
+</section>
+
+<!------------------------------- schedule container monday------------------------------------------->
+<section id="schedulecontainer">
+
+  <section id="weekDay" class="week-day">
+
+  <section class="class-box-container">      <!-- 1st classes------------------------------------------->
+   <div class="class-box-time">            <!-- time start and end -->
+   <div class="class-start-time">1:45</div>
+   <div class="class-end-time">2:45</div>
+   </div>
+   <div class="class-box-timeline">       <!-- time line -------->
+   <div class="timeline-circle"> <div class="active-time activeTimeOne" ></div></div>
+   <div class="timeline-line"></div>
+   </div>
+   <div class="class-box" >                <!-- class box -------->
+    <div class="classes classOne" >
+   <div class="classname"><span id="classnameOne">Subject</span></div>
+   <div class="techername"> Teachers: <span id="techerOne"></span></div>
+   </div>
+   </div> 
+</section> 
+
+<section class="class-box-container">    <!-- 2nd classes-------------------------------------------> 
+   <div class="class-box-time">          <!-- time start and end -->
+   <div class="class-start-time">2:45</div>
+   <div class="class-end-time">3:45</div>
+   </div>
+   <div class="class-box-timeline">      <!-- time line -------->
+   <div class="timeline-circle"> <div class="active-time activeTimeTwo"></div></div>
+   <div class="timeline-line"></div>
+   </div>
+   <div class="class-box" >              <!-- class box -------->
+   <div class="classes classTwo">
+   <div class="classname"><span id="classnameTwo">Subject</span></div>
+
+   <div class="techername"> Teachers: <span id="techerTwo"></span></div>
+  </div>
+  </div> 
+</section> 
+
+<section class="class-box-container">    <!-- 3rd classes-------------------------------------------> 
+  <div class="class-box-time">          <!-- time start and end -->
+  <div class="class-start-time">3:45</div>
+  <div class="class-end-time">4:45</div>
+  </div>
+  <div class="class-box-timeline">      <!-- time line -------->
+  <div class="timeline-circle"> <div class="active-time activeTimeThree"></div></div>
+  <div class="timeline-line"></div>
+  </div>
+  <div class="class-box" >              <!-- class box -------->
+  <div class="classes classThree">
+  <div class="classname"><span id="classnameThree">Subject</span></div>
+  <div class="techername"> Teachers: <span id="techerThree"></span> </div>
+ </div>
+ </div> 
+</section> 
+
+
+<section class="class-box-container">    <!-- 4th classes-------------------------------------------> 
+  <div class="class-box-time">          <!-- time start and end -->
+  <div class="class-start-time">4:45</div>
+  <div class="class-end-time">5:45</div>
+  </div>
+  <div class="class-box-timeline">      <!-- time line -------->
+  <div class="timeline-circle"> <div class="active-time activeTimeFour"></div></div>
+  <div class="timeline-line"></div>
+  </div>
+  <div class="class-box" >              <!-- class box -------->
+  <div class="classes classFour">
+  <div class="classname"><span id="classnameFour">Subject</span></div>
+  <div class="techername"> Teachers: <span id="techerFour"></span></div>
+ </div>
+ </div> 
+</section> 
 
 <section class="class-box-container">    <!-- 5th classes-------------------------------------------> 
   <div class="class-box-time">          <!-- time start and end -->
-  <div class="class-start-time">4:00</div>
-  <div class="class-end-time">5:00</div>
+  <div class="class-start-time">5:45</div>
+  <div class="class-end-time">6:45</div>
   </div>
   <div class="class-box-timeline">      <!-- time line -------->
   <div class="timeline-circle"> <div class="active-time activeTimeFive"></div></div>
@@ -15,3 +96,8 @@
  </div>
  </div> 
 </section> 
+
+
+
+</section>
+</section>
